# LongHap

./: .gitignore  LICENSE  LongHap.py  README.md  longhap.py  longhap.yaml  pyproject.toml
.github/workflows/: build_and_publish.yml  publish.yml
benchmarking/: README.md  Snakefile  analyze_longhap_phasing.smk  benchmark_longhap.ipynb  full_longhap_pipeline.smk  plot_locus.ipynb  population_analyses.ipynb
benchmarking/config/: config.yaml
benchmarking/envs/: hapcut2.yaml  longhap.yaml  longphase.yaml  methphaser.yaml  pbmm2.yaml  samtools.yaml  sniffles.yaml  whatshap.yaml
benchmarking/profiles/: config.yaml
src/longhap/: __init__.py  longhap.py
